1999-06-13  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTaskBar/ButtonArray.c (RemoveButton): fixed coredump when
	deleting the last button in list.

1999-06-14  Dominik Vogt  <domivotdomivogt@bvstp038.bbn.hp.com>

	* FvwmPager/x_pager.c (DispatchEvent): 
	* FvwmPager/FvwmPager.c (main): Any keystroke exits a transient pager

1999-11-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (Scroll): Center the desktop view around the
	mouse instead of placing the pointer in the top left corner.

	* FvwmPager/FvwmPager.c (main): 
	* FvwmPager/x_pager.c (DispatchEvent): transient pager ignores first
	button release for improved usability

Sat May 29 13:53:05 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* modules/FvwmEvent/FvwmEvent.c: replace packet size macros with
	new FvwmPacketHeaderSize & friends.

Sat May 29 13:38:03 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* modules/FvwmAnimate/FvwmAnimate.c:
	* modules/FvwmAuto/FvwmAuto.c:
	* modules/FvwmBacker/FvwmBacker.c:
	* modules/FvwmButtons/FvwmButtons.c:
	* modules/FvwmCommand/FvwmCommandS.c:
	* modules/FvwmConsole/FvwmConsole.c:
	* modules/FvwmDebug/FvwmDebug.c:
	* modules/FvwmForm/FvwmForm.c:
	* modules/FvwmGtk/FvwmGtk.c:
	* modules/FvwmIconBox/FvwmIconBox.c:
	* modules/FvwmIconMan/fvwm.c:
	* modules/FvwmIdent/FvwmIdent.c:
	* modules/FvwmPager/FvwmPager.c:
	* modules/FvwmPager/FvwmPager.h:
	* modules/FvwmRearrange/FvwmRearrange.c:
	* modules/FvwmSave/FvwmSave.c:
	* modules/FvwmSaveDesk/FvwmSaveDesk.c:
	* modules/FvwmScript/FvwmScript.c:
	* modules/FvwmTaskBar/FvwmTaskBar.c:
	* modules/FvwmWharf/FvwmWharf.c:
	* modules/FvwmWinList/FvwmWinList.c: rewrite calls to FvwmReadPacket().

1999-05-28  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmButtons/parse.c (ParseConfigLine): fixed coredump occuring with
	multiple empty panels

Mon May 24 21:27:48 1999  DanEspen  <dje@blue>

	* FvwmIconMan/readconfig.c (init_config_file): Use InitGetConfigLine to
	reduce pipe traffic.
